# langstage-vscode

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
deepagent_vscode/: __init__.py  __main__.py  sidecar.py
extension/: package-lock.json  package.json
extension/src/: extension.ts
langstage_vscode/: __init__.py  __main__.py  agui_stream.py  sidecar.py
tests/: conftest.py  test_agui_sidecar.py  test_packaging.py  test_sidecar.py
