[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langstage-vscode"
version = "0.4.3"
description = "Python stdio sidecar bridging LangGraph agents to the LangStage VS Code chat extension"
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "Kedar Dabhadkar"}
]
keywords = ["langgraph", "langchain", "langstage", "vscode", "agents", "ai"]
dependencies = [
    # >=0.6.4 modernizes off the stale <0.5 pin and carries the dual-mode content
    # fallback, so a CompiledGraph returning a finished AIMessage (non-token-
    # streaming agents) renders content instead of an empty chat turn (gh #-dogfood).
    "langgraph-stream-parser>=0.6.7,<0.7",
]

[project.optional-dependencies]
agui = [
    "langgraph-stream-parser[agui]>=0.6.7,<0.7",
]
demo = [
    "deepagents>=0.3",
]
dev = [
    "pytest>=8",
    "langgraph>=1.1.0",
    "langchain-core>=1.4.0",
]

[project.scripts]
langstage-vscode-sidecar = "langstage_vscode.sidecar:main"
# Deprecated alias command — kept for one transition window.
deepagent-vscode-sidecar = "langstage_vscode.sidecar:main"

[tool.hatch.build.targets.wheel]
packages = ["langstage_vscode", "deepagent_vscode"]

[tool.pytest.ini_options]
testpaths = ["tests"]
