[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langstage-vscode"
version = "0.4.8"
description = "Python stdio sidecar bridging LangGraph agents to the LangStage VS Code chat extension"
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "Kedar Dabhadkar"}
]
keywords = ["langgraph", "langchain", "langstage", "vscode", "agents", "ai"]
dependencies = [
    # >=0.6.4 modernizes off the stale <0.5 pin and carries the dual-mode content
    # fallback, so a CompiledGraph returning a finished AIMessage (non-token-
    # streaming agents) renders content instead of an empty chat turn (gh #-dogfood).
    # >=0.6.11 carries describe(omit_keys=...) (so --show-config can hide the
    # inherited server/ui keys this stdio sidecar doesn't honor), the honest stub
    # missing-deps error, and the full LANGSTAGE_SUPPRESS_LEGACY_NOTICE opt-out.
    "langgraph-stream-parser>=0.6.11,<0.7",
]

[project.optional-dependencies]
agui = [
    "langgraph-stream-parser[agui]>=0.6.11,<0.7",
]
demo = [
    # The `--demo` agent is the keyless echo stub (langgraph_stream_parser.demo.stub),
    # which needs only langgraph — NOT the whole deepagents ML stack (~30 packages,
    # incl. anthropic/google-genai). Pull core's lightweight [stub] extra instead.
    # (gh #-dogfood: base install + --demo errored, and [demo] was needlessly heavy.)
    "langgraph-stream-parser[stub]>=0.6.11,<0.7",
]
dev = [
    "pytest>=8",
    "langgraph>=1.1.0",
    "langchain-core>=1.4.0",
]

[project.scripts]
langstage-vscode-sidecar = "langstage_vscode.sidecar:main"
# Deprecated alias command — kept for one transition window.
deepagent-vscode-sidecar = "langstage_vscode.sidecar:main"

[tool.hatch.build.targets.wheel]
packages = ["langstage_vscode", "deepagent_vscode"]

[tool.pytest.ini_options]
testpaths = ["tests"]
