[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langstage-vscode"
version = "0.5.3"
description = "Python stdio sidecar bridging LangGraph agents to the LangStage VS Code chat extension"
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "Kedar Dabhadkar"}
]
keywords = ["langgraph", "langchain", "langstage", "vscode", "agents", "ai"]
dependencies = [
    # Since core 1.0 (ADR 0003) the sidecar streams turns ONLY through the
    # in-process AG-UI adapter — there is no built-in parser fallback — so the
    # AG-UI runtime (ag-ui-langgraph[fastapi] + uvicorn, pulled by core's [agui]
    # extra) is a HARD runtime requirement, not an opt-in. A bare
    # `pip install langstage-vscode` must be able to run a turn.
    "langstage-core[agui]>=1.0.7",
]

[project.optional-dependencies]
# Redundant since AG-UI moved into base deps (core 1.0); kept as a no-op alias so
# existing `pip install langstage-vscode[agui]` scripts/READMEs still resolve.
agui = [
    "langstage-core[agui]>=1.0.7",
]
# Redundant since 0.5.0: base deps pull langstage-core[agui], which brings langgraph,
# so the `--demo` stub runs on a base install. Kept as a no-op alias so existing
# `pip install langstage-vscode[demo]` scripts still resolve.
demo = [
    # The `--demo` agent is the keyless echo stub (langstage_core.demo.stub), which
    # needs only langgraph — NOT the whole deepagents ML stack (~30 packages, incl.
    # anthropic/google-genai). Pull core's lightweight [stub] extra instead.
    # (gh #-dogfood: base install + --demo errored, and [demo] was needlessly heavy.)
    "langstage-core[stub]>=1.0.7",
]
dev = [
    "pytest>=8",
    "langgraph>=1.1.0",
    "langchain-core>=1.4.0",
    # AG-UI runtime for the sidecar's only streaming path (base deps pull this via
    # core's [agui] extra; pinned here too so the test env is explicit).
    "ag-ui-langgraph>=0.0.41",
    "fastapi",
]

[project.scripts]
langstage-vscode-sidecar = "langstage_vscode.sidecar:main"
# Deprecated alias command — kept for one transition window.
deepagent-vscode-sidecar = "langstage_vscode.sidecar:main"

[tool.hatch.build.targets.wheel]
packages = ["langstage_vscode", "deepagent_vscode"]

[tool.pytest.ini_options]
testpaths = ["tests"]
